--- a/app/src/main/res/layout/bottom_note_view.xml
+++ b/app/src/main/res/layout/bottom_note_view.xml
@@ -10,26 +10,39 @@
         android:layout_height="match_parent"
         android:gravity="center_vertical"
         tools:ignore="MissingConstraints">
-        <Button
+        <ImageButton
             android:id="@+id/bottom_back"
-            android:layout_width="22dp"
-            android:layout_height="22dp"
-            android:background="@drawable/back_ripple"
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:paddingTop="14dp"
+            android:paddingBottom="14dp"
+            android:layout_marginStart="25dp"
+            android:background="@drawable/button_ripple"
+            android:scaleType="centerInside"
+            android:src="@drawable/back_icon"
             android:layout_alignParentLeft="true"/>
 
-        <Button
+        <ImageButton
             android:id="@+id/bottom_delete"
-            android:layout_width="22dp"
-            android:layout_height="22dp"
-            android:layout_marginRight="20dp"
-            android:background="@drawable/delete_icon"
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:paddingTop="14dp"
+            android:paddingBottom="14dp"
+            android:background="@drawable/button_ripple"
+            android:scaleType="centerInside"
+            android:src="@drawable/delete_icon"
             android:layout_toLeftOf="@+id/bottom_share"/>
-        <Button
+
+        <ImageButton
             android:id="@+id/bottom_share"
-            android:layout_width="22dp"
-            android:layout_height="22dp"
-            android:layout_marginRight="20dp"
-            android:background="@drawable/share_icon"
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:paddingTop="14dp"
+            android:paddingBottom="14dp"
+            android:background="@drawable/button_ripple"
+            android:scaleType="centerInside"
+            android:src="@drawable/share_icon"
+            android:layout_marginEnd="25dp"
             android:layout_alignParentRight="true"/>
     </RelativeLayout>
 
