--- a/app/src/main/res/layout/bottom_recording_audio.xml
+++ b/app/src/main/res/layout/bottom_recording_audio.xml
@@ -6,19 +6,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintBottom_toBottomOf="parent">
+    app:layout_constraintBottom_toBottomOf="parent"
+    android:background="@color/content_background">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:gravity="center_vertical"
-        tools:ignore="MissingConstraints">
+        tools:ignore="MissingConstraints"
+        android:background="@color/content_background">
 
         <ImageView
             android:id="@+id/bottom_audio_image"
             android:layout_width="22dp"
             android:layout_height="22dp"
             android:src="@drawable/audio_recording_icon"
+            android:layout_marginStart="25dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -39,27 +42,28 @@
         <Button
             android:id="@+id/audio_cancel"
             android:layout_width="60dp"
-            android:layout_height="23dp"
+            android:layout_height="match_parent"
             android:layout_alignParentEnd="true"
-            android:background="@null"
+            android:background="@drawable/button_ripple"
             android:text="@string/audio_cancel"
             android:textColor="@color/half_transparent_orange"
             android:textSize="16dp"
             android:textStyle="normal"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="5dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/audio_finish"
             app:layout_constraintTop_toTopOf="parent" />
         <Button
             android:id="@+id/audio_finish"
             android:layout_width="60dp"
-            android:layout_height="23dp"
+            android:layout_height="match_parent"
             android:layout_alignParentEnd="true"
-            android:background="@null"
+            android:background="@drawable/button_ripple"
             android:text="@string/audio_finish"
             android:textColor="@color/item_btn_textcolor"
             android:textSize="16dp"
             android:textStyle="normal"
+            android:layout_marginEnd="25dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
