--- a/app/src/main/res/layout/bottom_recording_photo.xml
+++ b/app/src/main/res/layout/bottom_recording_photo.xml
@@ -6,12 +6,15 @@
     android:layout_width="match_parent"
     android:layout_height="50dp"
     app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintBottom_toBottomOf="parent">
+    app:layout_constraintBottom_toBottomOf="parent"
+    android:background="@color/content_background">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:orientation="horizontal"
+        android:layout_marginStart="25dp"
+        android:layout_marginEnd="25dp"
         tools:ignore="MissingConstraints">
         <RelativeLayout
             android:layout_width="0dp"
@@ -27,7 +30,7 @@
                 android:id="@+id/photo_gallery"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@null"
+                android:background="@drawable/button_ripple"
                 android:textSize="16dp"
                 android:textColor="@color/item_btn_textcolor"
                 android:text="@string/photo_gallery"
@@ -49,7 +52,7 @@
                 android:id="@+id/photo_camera"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@null"
+                android:background="@drawable/button_ripple"
                 android:textSize="16dp"
                 android:textColor="@color/item_btn_textcolor"
                 android:text="@string/photo_camera"
