--- a/app/src/main/res/layout/bottom_recording_view.xml
+++ b/app/src/main/res/layout/bottom_recording_view.xml
@@ -4,39 +4,55 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="50dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/content_background">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center_vertical"
         tools:ignore="MissingConstraints">
-        <Button
+        <ImageButton
             android:id="@+id/bottom_back"
-            android:layout_width="22dp"
-            android:layout_height="22dp"
-            android:background="@drawable/back_ripple"
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:paddingTop="14dp"
+            android:paddingBottom="14dp"
+            android:layout_marginStart="25dp"
+            android:background="@drawable/button_ripple"
+            android:scaleType="centerInside"
+            android:src="@drawable/back_icon"
             android:layout_alignParentLeft="true"/>
 
-        <Button
+        <ImageButton
             android:id="@+id/bottom_delete"
-            android:layout_width="22dp"
-            android:layout_height="22dp"
-            android:layout_marginRight="20dp"
-            android:background="@drawable/delete_icon"
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:paddingTop="14dp"
+            android:paddingBottom="14dp"
+            android:background="@drawable/button_ripple"
+            android:scaleType="centerInside"
+            android:src="@drawable/delete_icon"
             android:layout_toLeftOf="@+id/bottom_share"/>
-        <Button
+        <ImageButton
             android:id="@+id/bottom_share"
-            android:layout_width="22dp"
-            android:layout_height="22dp"
-            android:layout_marginRight="20dp"
-            android:background="@drawable/share_icon"
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:paddingTop="14dp"
+            android:paddingBottom="14dp"
+            android:background="@drawable/button_ripple"
+            android:scaleType="centerInside"
+            android:src="@drawable/share_icon"
             android:layout_toLeftOf="@+id/bottom_view_alarm"/>
-        <Button
+        <ImageButton
             android:id="@+id/bottom_view_alarm"
-            android:layout_width="22dp"
-            android:layout_height="22dp"
-            android:layout_marginRight="20dp"
-            android:background="@drawable/alarm_clock_icon"
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:paddingTop="14dp"
+            android:paddingBottom="14dp"
+            android:background="@drawable/button_ripple"
+            android:scaleType="centerInside"
+            android:src="@drawable/alarm_clock_icon"
+            android:layout_marginEnd="10dp"
             android:layout_toLeftOf="@+id/bottom_view_urgent"/>
         <Switch
             android:id="@+id/bottom_view_urgent"
@@ -45,7 +61,9 @@
             android:checked="true"
             android:thumb="@drawable/rectangle_thumb_selector"
             android:track="@drawable/urgent_track_selector"
-            android:layout_alignParentRight="true"/>
+            android:layout_marginEnd="25dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"/>
     </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
