--- a/app/src/main/res/layout/list_content.xml
+++ b/app/src/main/res/layout/list_content.xml
@@ -27,15 +27,17 @@
 
         <TextView
             android:id="@+id/list_title"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_marginEnd="10dp"
             android:layout_marginStart="10dp"
             android:clickable="true"
             android:focusable="true"
-            android:gravity="center"
+            android:gravity="start"
             android:textColor="@color/recording_title"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/start_default"
             app:layout_constraintStart_toEndOf="@+id/expand_icon"
             app:layout_constraintTop_toTopOf="parent" />
 
