--- a/app/src/main/res/layout/item_recording_photo.xml
+++ b/app/src/main/res/layout/item_recording_photo.xml
@@ -8,31 +8,28 @@
     android:paddingTop="10dp"
     android:paddingBottom="5dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingStart="17dp"
-        android:paddingTop="8dp"
-        android:paddingEnd="17dp"
-        android:paddingBottom="5dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints">
-
         <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingStart="17dp"
+            android:paddingTop="8dp"
+            android:paddingEnd="17dp"
+            android:paddingBottom="5dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
             <com.shining.memo.widget.MaskImageView
                 app:mask_color="#88000000"
                 app:mask_level="foreground"
                 app:is_ignore_alpha="false"
                 app:is_show_mask_on_click="false"
                 android:id="@+id/item_imageView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_vertical"
-                android:background="@drawable/audio_rerecording_shape"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:background="@color/content_background"
                 android:scaleType="fitCenter" />
             <Button
                 android:id="@+id/photo_delete"
@@ -44,5 +41,5 @@
                 android:visibility="gone"/>
         </RelativeLayout>
 
-    </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
