--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -11,14 +11,15 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/alarm_header"
         android:layout_width="match_parent"
-        android:layout_height="55dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="23dp"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/alarm_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="25dp"
             android:gravity="center"
             android:text="@string/alarm_clock"
             android:textColor="@color/calendar_select"
@@ -47,7 +48,7 @@
         android:id="@+id/set_alarm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="20dp"
         android:background="@color/colorWhite"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
@@ -61,7 +62,7 @@
             android:layout_weight="1" />
 
         <View
-            android:layout_width="1dp"
+            android:layout_width="2dp"
             android:layout_height="match_parent"
             android:background="@color/line_color" />
 
@@ -72,7 +73,7 @@
             android:layout_weight="1" />
 
         <View
-            android:layout_width="1dp"
+            android:layout_width="2dp"
             android:layout_height="match_parent"
             android:background="@color/line_color" />
 
@@ -83,7 +84,7 @@
             android:layout_weight="1" />
 
         <View
-            android:layout_width="1dp"
+            android:layout_width="2dp"
             android:layout_height="match_parent"
             android:background="@color/line_color" />
 
@@ -123,7 +124,7 @@
         android:layout_height="110dp"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="20dp"
         android:background="@color/colorWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -196,7 +197,7 @@
         android:layout_height="55dp"
         android:layout_marginEnd="24dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/alarm_button_set"
         android:text="@string/set_alarm_clock"
         android:textColor="@color/colorWhite"
