--- a/app/src/main/res/layout/activity_guide.xml
+++ b/app/src/main/res/layout/activity_guide.xml
@@ -63,7 +63,7 @@
         android:layout_width="180dp"
         android:layout_height="45dp"
         android:layout_marginTop="28dp"
-        android:background="@drawable/guide_button"
+        android:background="@drawable/guide_button_selector"
         android:textSize="16sp"
         android:textColor="@color/guide_button"
         android:text="@string/guide_button"
