--- a/app/src/main/res/layout/activity_task.xml
+++ b/app/src/main/res/layout/activity_task.xml
@@ -18,15 +18,15 @@
         android:layout_marginTop="30dp"
         android:layout_marginEnd="25dp"
         android:background="@null"
-        android:ems="10"
-        android:gravity="center_vertical|left"
+        android:maxEms="14"
         android:hint="@string/edit_title_hint_zh"
         android:imeOptions="actionNext"
-        android:inputType="textMultiLine"
+        android:ellipsize="end"
         android:minHeight="40dp"
+        android:paddingTop="10dp"
         android:paddingLeft="2dp"
         android:paddingRight="2dp"
-        android:textAlignment="gravity"
+        android:textAlignment="textStart"
         android:textStyle="bold"
         android:textColor="@color/recording_title"
         android:textColorHint="@color/hintColor"
