--- a/app/src/main/res/drawable/alarm_button_delete.xml
+++ b/app/src/main/res/drawable/alarm_button_delete.xml
@@ -2,6 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid
-        android:color="@color/item_btn_text"/>
+        android:color="@color/content_background"/>
     <corners android:radius="8dp"/>
+    <stroke android:width="1.5dp" android:color="@color/alarm_btn_delete_border"></stroke>
 </shape>
