--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -35,20 +35,22 @@
     <color name="alarm_selected">#59B29C</color>
     <color name="alarm_unselected">#333333</color>
     <color name="line_color">#EEEEEE</color>
-    <color name="ringtone_reminder">#363636</color>
-    <color name="pop_reminder">#d0d0d0</color>
+    <color name="ringtone_reminder">#333333</color>
+    <color name="pop_reminder">#CCCCCC</color>
     <color name="alarm_true">#ff4081</color>
     <color name="alarm_false">#e0e0e0</color>
     <color name="urgent_true">#FF4C4C</color>
     <color name="recording">#548B54</color>
     <color name="alarm_btn_background">#FF8833</color>
     <color name="volume_background">#B0FF8833</color>
+    <color name="alarm_btn_delete_border">#AAAAAA</color>
+    <color name="alarm_btn_no_delete">#E5E5E5</color>
 
     <!-- task color -->
     <color name="recording_title">#666666</color>
     <color name="content_background">#FAFAFA</color>
     <color name="underline_background">#EEEEEE</color>
-    <string name="hint_color">#AAAAAA </string>
+    <string name="hint_color">#AAAAAA</string>
     <color name="item_btn_background">#FFF6F0</color>
     <color name="item_btn_text">#FF8833</color>
     <color name="half_transparent_orange">#8EFF8833 </color>
