--- a/app/src/main/res/drawable/alarm_savebtn_shadow.xml
+++ b/app/src/main/res/drawable/alarm_savebtn_shadow.xml
@@ -9,7 +9,7 @@
         android:right="2dp"
         android:bottom="2dp">
         <shape android:shape="rectangle" >
-            <solid android:color="@color/alarm_btn_no_delete"></solid>
+            <solid android:color="@color/alarm_save_shadow"></solid>
             <corners android:radius="10dp"/>
         </shape>
     </item>
@@ -22,7 +22,7 @@
         android:right="4dp"
         android:bottom="4dp">
         <shape android:shape="rectangle" >
-            <solid android:color="@color/pop_reminder"></solid>
+            <solid android:color="@color/text_color_orange"></solid>
             <corners android:radius="8dp"/>
         </shape>
     </item>
