--- a/app/src/main/res/layout/main_home.xml
+++ b/app/src/main/res/layout/main_home.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginLeft="25dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent">
         <TextView
@@ -18,7 +18,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:textSize="16sp"
+            android:paddingTop="5dp"
+            android:paddingRight="10dp"
+            android:paddingBottom="5dp"
+            android:textSize="20sp"
             android:textStyle="bold"
             android:textColor="@color/main_task_noclickcolor"
             android:text="Task"
@@ -27,8 +30,10 @@
             android:id="@+id/main_titlebar_list"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:textSize="16sp"
+            android:paddingTop="5dp"
+            android:paddingRight="10dp"
+            android:paddingBottom="5dp"
+            android:textSize="20sp"
             android:textStyle="bold"
             android:textColor="@color/main_task_noclickcolor"
             android:gravity="center"
@@ -38,8 +43,10 @@
             android:id="@+id/main_titlebar_note"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:textSize="16sp"
+            android:paddingTop="5dp"
+            android:paddingRight="10dp"
+            android:paddingBottom="5dp"
+            android:textSize="20sp"
             android:textStyle="bold"
             android:textColor="@color/main_task_noclickcolor"
             android:gravity="center"
