--- a/app/src/main/res/layout/item_recording_audio.xml
+++ b/app/src/main/res/layout/item_recording_audio.xml
@@ -64,6 +64,7 @@
                 android:splitTrack="false"
                 android:thumbOffset="0dp"
                 android:progress="0"
+                android:maxHeight="5dp"
                 android:thumb="@drawable/seek_bar_thumb"
                 android:progressDrawable="@drawable/seek_bar_progress" />
 
