--- a/app/src/main/res/drawable/alarm_button_delete.xml
+++ b/app/src/main/res/drawable/alarm_button_delete.xml
@@ -10,7 +10,10 @@
     android:right="2dp"
     android:bottom="2dp">
     <shape android:shape="rectangle" >
-        <stroke android:width="2dp" android:color="@color/alarm_btn_no_delete"></stroke>
+        <gradient
+            android:startColor="@color/alarm_btn_delete_border"
+            android:endColor="@color/alarm_btn_no_delete"
+            android:angle="270"/>
         <corners android:radius="10dp"/>
     </shape>
 </item>
@@ -21,7 +24,7 @@
     android:left="2dp"
     android:top="2dp"
     android:right="2dp"
-    android:bottom="3.5dp">
+    android:bottom="4dp">
     <shape xmlns:android="http://schemas.android.com/apk/res/android"
         android:shape="rectangle">
         <solid
