--- a/app/src/main/res/drawable/no_alarm_button_delete.xml
+++ b/app/src/main/res/drawable/no_alarm_button_delete.xml
@@ -9,7 +9,10 @@
         android:right="2dp"
         android:bottom="2dp">
         <shape android:shape="rectangle" >
-            <solid android:color="@color/alarm_btn_no_delete"></solid>
+            <gradient
+                android:startColor="@color/pop_reminder"
+                android:endColor="@color/alarm_btn_no_delete"
+                android:angle="270"/>
             <corners android:radius="10dp"/>
         </shape>
     </item>
@@ -20,7 +23,7 @@
         android:left="2dp"
         android:top="2dp"
         android:right="2dp"
-        android:bottom="3.5dp">
+        android:bottom="4dp">
         <shape android:shape="rectangle" >
             <solid android:color="@color/pop_reminder"></solid>
             <corners android:radius="8dp"/>
