--- a/app/src/main/res/layout/bottom_recording_audio.xml
+++ b/app/src/main/res/layout/bottom_recording_audio.xml
@@ -45,7 +45,7 @@
             android:layout_height="match_parent"
             android:layout_alignParentEnd="true"
             android:background="@drawable/button_ripple"
-            android:text="@string/cancer"
+            android:text="@string/cancel"
             android:textColor="@color/half_transparent_orange"
             android:textSize="16dp"
             android:textStyle="normal"
