--- a/app/src/main/res/layout/activity_guide.xml
+++ b/app/src/main/res/layout/activity_guide.xml
@@ -11,10 +11,44 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/guide_pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="570dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guide_pager"
+        app:layout_constraintTop_toTopOf="@+id/guide_pager">
+
+        <TextView
+            android:id="@+id/guide_dot_1"
+            android:layout_width="7dp"
+            android:layout_height="7dp"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/dot_orange" />
+
+        <TextView
+            android:id="@+id/guide_dot_2"
+            android:layout_width="7dp"
+            android:layout_height="7dp"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/dot_white" />
+
+        <TextView
+            android:id="@+id/guide_dot_3"
+            android:layout_width="7dp"
+            android:layout_height="7dp"
+            android:background="@drawable/dot_white" />
+
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
