--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -18,7 +18,7 @@
         android:layout_marginStart="25dp"
         android:layout_marginTop="32dp"
         android:ems="10"
-        android:hint="@string/title"
+        android:hint="@string/list_hint_title"
         android:inputType="textPersonName"
         android:paddingBottom="12dp"
         android:textColor="@color/recording_title"
@@ -85,14 +85,14 @@
             android:id="@+id/list_delete"
             android:layout_width="22dp"
             android:layout_height="22dp"
-            android:layout_marginStart="24dp"
+            android:layout_marginEnd="24dp"
             android:background="@drawable/delete_icon"
             android:gravity="center"
             android:minHeight="0dp"
             android:minWidth="0dp"
             android:padding="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/list_cancel"
+            app:layout_constraintEnd_toStartOf="@+id/list_share"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.484" />
 
@@ -102,21 +102,6 @@
             android:layout_height="22dp"
             android:layout_marginEnd="24dp"
             android:background="@drawable/share_icon"
-            android:gravity="center"
-            android:minHeight="0dp"
-            android:minWidth="0dp"
-            android:padding="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/list_favorites"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.484" />
-
-        <Button
-            android:id="@+id/list_favorites"
-            android:layout_width="22dp"
-            android:layout_height="22dp"
-            android:layout_marginEnd="24dp"
-            android:background="@drawable/add_to_favorites_icon"
             android:gravity="center"
             android:minHeight="0dp"
             android:minWidth="0dp"
