--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -44,67 +44,68 @@
         android:id="@+id/list_menu"
         android:layout_width="0dp"
         android:layout_height="55dp"
-        android:layout_marginBottom="3dp"
         android:background="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/list_content">
 
-        <Button
+        <ImageButton
             android:id="@+id/list_cancel"
-            android:layout_width="22dp"
-            android:layout_height="22dp"
-            android:layout_marginStart="25dp"
-            android:background="@drawable/back_icon"
-            android:gravity="center"
-            android:minHeight="0dp"
-            android:minWidth="0dp"
-            android:padding="0dp"
+            android:layout_width="44dp"
+            android:layout_height="44dp"
+            android:layout_marginStart="14dp"
+            android:background="@drawable/button_ripple"
+            android:contentDescription="@string/back_icon"
+            android:paddingBottom="11dp"
+            android:paddingTop="11dp"
+            android:scaleType="centerInside"
+            android:src="@drawable/back_icon"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
+        <ImageButton
             android:id="@+id/list_delete"
-            android:layout_width="22dp"
-            android:layout_height="22dp"
-            android:layout_marginEnd="24dp"
-            android:background="@drawable/delete_icon"
-            android:gravity="center"
-            android:minHeight="0dp"
-            android:minWidth="0dp"
-            android:padding="0dp"
+            android:layout_width="44dp"
+            android:layout_height="44dp"
+            android:paddingTop="11dp"
+            android:paddingBottom="11dp"
+            android:scaleType="centerInside"
+            android:src="@drawable/delete_icon"
+            android:contentDescription="@string/delete_icon"
+            android:background="@drawable/button_ripple"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/list_share"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.484" />
 
-        <Button
+        <ImageButton
             android:id="@+id/list_share"
-            android:layout_width="22dp"
-            android:layout_height="22dp"
-            android:layout_marginEnd="24dp"
-            android:background="@drawable/share_icon"
-            android:gravity="center"
-            android:minHeight="0dp"
-            android:minWidth="0dp"
-            android:padding="0dp"
+            android:layout_width="44dp"
+            android:layout_height="44dp"
+            android:paddingTop="11dp"
+            android:paddingBottom="11dp"
+            android:scaleType="centerInside"
+            android:src="@drawable/share_icon"
+            android:contentDescription="@string/share_icon"
+            android:background="@drawable/button_ripple"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/list_confirm"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.484" />
 
-        <Button
+        <ImageButton
             android:id="@+id/list_confirm"
-            android:layout_width="22dp"
-            android:layout_height="22dp"
-            android:layout_marginEnd="25dp"
-            android:background="@drawable/save_icon"
-            android:gravity="center"
-            android:minHeight="0dp"
-            android:minWidth="0dp"
-            android:padding="0dp"
+            android:layout_width="44dp"
+            android:layout_height="44dp"
+            android:layout_marginEnd="14dp"
+            android:background="@drawable/button_ripple"
+            android:contentDescription="@string/save_icon"
+            android:paddingBottom="11dp"
+            android:paddingTop="11dp"
+            android:scaleType="centerInside"
+            android:src="@drawable/save_icon"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
