--- a/app/src/main/res/layout/main_home.xml
+++ b/app/src/main/res/layout/main_home.xml
@@ -25,7 +25,7 @@
             android:textSize="20sp"
             android:textStyle="bold"
             android:textColor="@color/main_task_not_click"
-            android:text="Task"
+            android:text="@string/task"
             />
         <TextView
             android:id="@+id/main_titlebar_list"
@@ -38,7 +38,7 @@
             android:textStyle="bold"
             android:textColor="@color/main_task_not_click"
             android:gravity="center"
-            android:text="List"
+            android:text="@string/list"
             />
         <TextView
             android:id="@+id/main_titlebar_note"
@@ -51,16 +51,19 @@
             android:textStyle="bold"
             android:textColor="@color/main_task_not_click"
             android:gravity="center"
-            android:text="Note"
+            android:text="@string/note"
             />
     </LinearLayout>
     <ImageButton
         android:id="@+id/main_titlebar_calendar"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:background="@drawable/main_calendar"
-        android:layout_marginTop="23dp"
-        android:layout_marginRight="25dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:src="@drawable/calendar_icon"
+        android:scaleType="fitCenter"
+        android:background="@null"
+        android:layout_marginTop="11dp"
+        android:layout_marginRight="13dp"
+        android:padding="12dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
     <View
