--- a/app/src/main/res/layout/list_main.xml
+++ b/app/src/main/res/layout/list_main.xml
@@ -11,16 +11,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
+        <ImageButton
             android:id="@+id/expand_icon"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="25dp"
-            android:background="@drawable/fold_icon"
-            android:clickable="true"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginStart="16dp"
+            android:background="@color/white"
             android:contentDescription="@string/expand_icon"
-            android:focusable="true"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
+            android:scaleType="centerInside"
+            android:src="@drawable/fold_icon"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -29,28 +30,26 @@
             android:id="@+id/list_title"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_marginStart="7dp"
             android:layout_marginEnd="15dp"
-            android:layout_marginStart="15dp"
             android:clickable="true"
             android:focusable="true"
             android:gravity="start"
             android:textColor="@color/recording_title"
-            android:textSize="18sp"
+            android:textSize="16sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/start_default"
+            app:layout_constraintEnd_toStartOf="@+id/finished_icon"
             app:layout_constraintStart_toEndOf="@+id/expand_icon"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/start_default"
+            android:id="@+id/finished_icon"
             android:layout_width="16dp"
             android:layout_height="16dp"
             android:layout_centerVertical="true"
             android:layout_marginEnd="25dp"
-            android:background="@drawable/star_default_icon"
-            android:clickable="true"
             android:contentDescription="@string/start_default"
-            android:focusable="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
